--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 header{
     background-color: #005f4b;
     height: 100px;
+    padding-right: 80px;
 }
 h1{
     background-color: aquamarine;
@@ -15,11 +16,11 @@ text-align: center;
 margin-right: 100px;
 }
 button{
-    margin: 5px;
     border-radius: 10px;
     background-color: rgb(255, 255, 255);
     color: #043604;
     height: 30px;
+    margin: 5px;
 }
 .header{
     display: flex;
@@ -27,10 +28,22 @@ button{
     align-items: center;
 }
 p{
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 40px;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 70px;
+    margin-left: 80px;
+    margin-right: 80px;
+    text-align: center;
 }
 div{
     display: flex;
-    align-items: center;
+    align-items:center;
+}
+footer{
+    background-color: #005f4b;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: white;
+}
+img{
+    margin-left: 80px;
+    margin-right: 80px;
 }
