--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,9 @@ h2{
 font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 font-size: 97px;
 text-align: center;
-margin-right: 100px;
+margin-right: 80px;
+
+
 }
 button{
     border-radius: 10px;
@@ -21,6 +23,12 @@ button{
     color: #043604;
     height: 30px;
     margin: 5px;
+}
+button:hover{
+    filter: brightness(85%);
+    background-color: #043604;
+    color: rgb(255, 255, 255);
+
 }
 .header{
     display: flex;
